Creación del Modelo, Contexto y Primera Migración

--- a/BE-CRUDMascotas/appsettings.json
+++ b/BE-CRUDMascotas/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conexion": "Server=.\\SQLEXPRESS04;Database=Veterinaria;Trusted_Connection=True;"
+  }
 }
